Use java.util to handle Base64